# WLambda

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  _update_doc.sh  bind.sh  perf.sh  rustfmt.toml
doc/: wlambda_reference.md
examples/: bencharena.rs  random_syntax_stuff.wl
res/: wlambda_logo_500.xcf
scripts/: annotate_elements.wl  chemical_data_from_en_wikipedia.txt  chems_match_cascade.wl  pack_jsons.wl  repy2test.wl  scan_toc.wl  split_doc.wl  wlambda_highlight_collection.wl
scripts/benches/: box_vs_rs.wl  call_performance.wl  jmptbl.wl  nvec.wl
src/: aval.rs  chemical_elements.json  chemical_elements.json.lzw  chemistry.rs  cmdline_doc.json  code_fmt.rs  compiler.rs  csv.rs  formatter.rs  io.rs  lib.rs  main.rs  net.rs  nvec.rs  ops.rs  packer.rs  parser.rs  prelude.rs  prog_writer.rs  rpc_helper.rs  rt_compiler.rs  selector.rs  str_int.rs  struct_pattern.rs  threads.rs  types.rs  util.rs  vm.rs  vval.rs  vval_user_obj.rs  xml.rs
src/parser/: parse_state.rs  state.rs
src/stdlib/: consts.rs  csv.rs  cursive.rs  helpers.rs  html2vval.rs  http.rs  imap.rs  io_types.rs  mod.rs  mqtt.rs  net.rs  odbc.rs  process.rs  rcdom.rs  sqlite.rs  util.rs  xml.rs
tests/: language.rs  rtlanguage.rs  test_mod.wl  test_mod_const.wl  test_mod_r1.wl  test_mod_r2.wl  test_mod_r3.wl  test_paths_mod.wl  test_paths_mod2.wl  typed.rs  types.rs  wlambda_code_blocks.rs  wlambda_functions.rs
vim/: wlambda.vim
