[package]
name         = "wlambda"
version      = "0.7.2"
authors      = ["Weird Constructor <weirdconstructor@gmail.com>"]
license      = "GPL-3.0-or-later"
edition      = "2018"
description  = "WLambda is an embeddable scripting language for Rust"
repository   = "https://github.com/WeirdConstructor/WLambda"
readme       = "README.md"
keywords     = ["simple","scripting","language","embeddable","embedded","lisp"]
categories   = ["parsing","compilers","game-development","config","parser-implementations"]
exclude      = ["res/*"]

[features]
default = [
    "rustyline", "regex", "chrono", "serde", "serde_json",
    "rmp-serde", "quick-xml", "socket2"
]

[dependencies]
fnv        = "1.0.7"
rustyline  = { version = "6.1.2",   optional = true }
regex      = { version = "1.3.9",   optional = true }
chrono     = { version = "0.4.11",  optional = true }
serde      = { version = "1.0.111", optional = true, features = ["derive"] }
serde_json = { version = "1.0.53",  optional = true }
rmp-serde  = { version = "0.14.3",  optional = true }
mint       = { version = "0.5.5",   optional = true }
quick-xml  = { version = "0.20.0",  optional = true }
socket2    = { version = "0.3.11",  optional = true, features = ["reuseport"] }

[dev-dependencies]
regex-syntax = { version = "0.6.18" }

[profile.release]
debug = true
#opt-level="z"
#lto = true
#panic = 'abort'
