[package]
name         = "wlambda"
version      = "0.8.1"
authors      = ["Weird Constructor <weirdconstructor@gmail.com>"]
license      = "GPL-3.0-or-later"
edition      = "2021"
description  = "WLambda is an embeddable scripting language for Rust"
repository   = "https://github.com/WeirdConstructor/WLambda"
readme       = "README.md"
keywords     = ["scripting","language","embeddable","embedded","lisp"]
categories   = ["parsing","compilers","game-development","config","parser-implementations"]
exclude      = ["res/*"]

[features]
default = [
    "rustyline", "regex", "chrono", "serde", "serde_json",
    "rmp-serde", "toml", "quick-xml", "socket2", "base64"
]
mqtt = ["rumqttd", "rumqttc"]
http = ["reqwest"]
all = ["mqtt", "http", "cursive", "zip"]

[dependencies]
fnv        = "1.0.7"
rustyline  = { version = "6.1.2",   optional = true }
zip        = { version = "0.6.3",   optional = true, features = ["deflate"], default-features = false }
regex      = { version = "1.3.9",   optional = true }
chrono     = { version = "0.4.11",  optional = true }
serde      = { version = "1.0.111", optional = true, features = ["derive"] }
serde_json = { version = "1.0.53",  optional = true }
rmp-serde  = { version = "0.14.3",  optional = true }
toml       = { version = "0.5.9",   optional = true }
mint       = { version = "0.5.5",   optional = true }
quick-xml  = { version = "0.20.0",  optional = true }
socket2    = { version = "0.3.11",  optional = true, features = ["reuseport"] }
reqwest    = { version = "0.11.9",  optional = true, features = ["blocking"] }
rumqttc    = { version = "0.16.0",  optional = true }
rumqttd    = { version = "0.11.0",  optional = true }
cursive    = { version = "0.20.0",  optional = true, features = ["crossterm-backend"], default-features = false }
#rumqttc    = { path = "../other/rumqtt/rumqttc",  optional = true }
#rumqttd    = { path = "../other/rumqtt/rumqttd",  optional = true }
base64     = { version = "0.13.0",  optional = true }

[dev-dependencies]
regex-syntax = { version = "0.6.18" }

[profile.release]
debug = true
#opt-level="z"
#lto = true
#panic = 'abort'
