[package]
name         = "wlambda"
version      = "0.8.1"
authors      = ["Weird Constructor <weirdconstructor@gmail.com>"]
license      = "GPL-3.0-or-later"
edition      = "2021"
description  = "WLambda is an embeddable scripting language for Rust"
repository   = "https://github.com/WeirdConstructor/WLambda"
readme       = "README.md"
keywords     = ["scripting","language","embeddable","embedded","lisp"]
categories   = ["parsing","compilers","game-development","config","parser-implementations"]
exclude      = ["res/*"]

[features]
default = [
    "rustyline", "regex", "chrono", "serde", "serde_json",
    "rmp-serde", "toml", "quick-xml", "socket2", "base64", "flate2"
]
mqtt = ["rumqttd", "rumqttc"]
http = ["reqwest"]
cursive = ["dep:cursive", "cursive_buffered_backend", "unicode-width"]
odbc = ["odbc-api", "odbc-sys"]
clipboard = ["copypasta"]
all = ["mqtt", "http", "cursive", "zip", "odbc", "clipboard"]

[dependencies]
fnv        = "1.0.7"
weezl      = "0.1.7"
rustyline  = { version = "6.1.2",   optional = true }
zip        = { version = "0.6.3",   optional = true, features = ["deflate"], default-features = false }
flate2     = { version = "1.0.25",  optional = true }
regex      = { version = "1.7.3",   optional = true }
chrono     = { version = "0.4.24",  optional = true }
serde      = { version = "1.0.159", optional = true, features = ["derive"] }
serde_json = { version = "1.0.95",  optional = true }
rmp-serde  = { version = "1.1.1",  optional = true }
toml       = { version = "0.5.9",   optional = true }
mint       = { version = "0.5.5",   optional = true }
quick-xml  = { version = "0.27.1",  optional = true }
socket2    = { version = "0.5.1",  optional = true, features = ["all"] }
reqwest    = { version = "0.11.9",  optional = true, features = ["blocking"] }
rumqttc    = { version = "0.20.0",  optional = true }
rumqttd    = { version = "0.14.0",  optional = true }
cursive    = { version = "0.20.0",  optional = true, features = ["crossterm-backend"], default-features = false }
cursive_buffered_backend = { version = "0.6.1", optional = true }
unicode-width = { version = "0.1", optional = true }
odbc-api = { version = "0.52.4", optional = true }
odbc-sys = { version = "0.21.3", optional = true }
copypasta = { version = "0.8.1", optional = true }
#cursive    = { path = "../cursive/cursive",  optional = true, features = ["crossterm-backend"], default-features = false }
#rumqttc    = { path = "../other/rumqtt/rumqttc",  optional = true }
#rumqttd    = { path = "../other/rumqtt/rumqttd",  optional = true }
base64     = { version = "0.13.0",  optional = true }

[dev-dependencies]
regex-syntax = { version = "0.6.18" }

[profile.release]
debug = true
#opt-level="z"
#lto = true
#panic = 'abort'
